interfaces/C/Uno_C_API.h

   
   void uno_get_version(int32_t* major, int32_t* minor, int32_t* patch);
   typedef int32_t (*Objective)(int32_t number_variables, const double* x, double* objective_value, void* user_data);
   typedef int32_t (*Constraints)(int32_t number_variables, int32_t number_constraints, const double* x, double* constraint_values,
      void* user_data);
   typedef int32_t (*ObjectiveGradient)(int32_t number_variables, const double* x, double* gradient, void* user_data);
   typedef int32_t (*Jacobian)(int32_t number_variables, int32_t number_jacobian_nonzeros, const double* x, double* jacobian,
      void* user_data);
   typedef int32_t (*Hessian)(int32_t number_variables, int32_t number_constraints, int32_t number_hessian_nonzeros,
      const double* x, double objective_multiplier, const double* multipliers, double* hessian, void* user_data);
   typedef int32_t (*JacobianOperator)(int32_t number_variables, int32_t number_constraints, const double* x,
      bool evaluate_at_x, const double* vector, double* result, void* user_data);
   typedef int32_t (*JacobianTransposedOperator)(int32_t number_variables, int32_t number_constraints, const double* x,
      bool evaluate_at_x, const double* vector, double* result, void* user_data);
   typedef int32_t (*HessianOperator)(int32_t number_variables, int32_t number_constraints, const double* x,
      bool evaluate_at_x, double objective_multiplier, const double* multipliers, const double* vector,
      double* result, void* user_data);
   typedef void (*NotifyAcceptableIterateUserCallback)(int32_t number_variables, int32_t number_constraints, const double* primals,
      const double* lower_bound_multipliers, const double* upper_bound_multipliers, const double* constraint_multipliers,
      double objective_multiplier, double primal_feasibility_residual, double stationarity_residual,
      double complementarity_residual, void* user_data);
   typedef bool (*TerminationUserCallback)(int32_t number_variables, int32_t number_constraints, const double* primals,
      const double* lower_bound_multipliers, const double* upper_bound_multipliers, const double* constraint_multipliers,
      double objective_multiplier, double primal_feasibility_residual, double stationarity_residual,
      double complementarity_residual, void* user_data);
   typedef int32_t (*LoggerStreamUserCallback)(const char* buffer, int32_t length, void* user_data);
   void* uno_create_model(const char* problem_type, int32_t number_variables, const double* variables_lower_bounds,
      const double* variables_upper_bounds, int32_t base_indexing);
   bool uno_set_objective(void* model, int32_t optimization_sense, Objective objective_function,
      ObjectiveGradient objective_gradient);
   bool uno_set_constraints(void* model, int32_t number_constraints, Constraints constraint_functions,
      const double* constraints_lower_bounds, const double* constraints_upper_bounds, int32_t number_jacobian_nonzeros,
      const int32_t* jacobian_row_indices, const int32_t* jacobian_column_indices, Jacobian constraint_jacobian);
   bool uno_set_jacobian_operator(void* model, JacobianOperator jacobian_operator);
   bool uno_set_jacobian_transposed_operator(void* model, JacobianTransposedOperator jacobian_transposed_operator);
   bool uno_set_lagrangian_hessian(void* model, int32_t number_hessian_nonzeros, char hessian_triangular_part,
      const int32_t* hessian_row_indices, const int32_t* hessian_column_indices, Hessian lagrangian_hessian,
      double lagrangian_sign_convention);
   bool uno_set_lagrangian_hessian_operator(void* model, HessianOperator lagrangian_hessian_operator,
      double lagrangian_sign_convention);
   bool uno_set_user_data(void* model, void* user_data);
   bool uno_set_initial_primal_iterate_component(void* model, int32_t index, double initial_primal_component);
   bool uno_set_initial_dual_iterate_component(void* model, int32_t index, double initial_dual_component);
   bool uno_set_initial_primal_iterate(void* model, const double* initial_primal_iterate);
   bool uno_set_initial_dual_iterate(void* model, const double* initial_dual_iterate);
   void* uno_create_solver();
   bool uno_set_solver_integer_option(void* solver, const char* option_name, int32_t option_value);
   bool uno_set_solver_double_option(void* solver, const char* option_name, double option_value);
   bool uno_set_solver_bool_option(void* solver, const char* option_name, bool option_value);
   bool uno_set_solver_string_option(void* solver, const char* option_name, const char* option_value);
   int32_t uno_get_solver_option_type(void* solver, const char* option_name);
   bool uno_load_solver_option_file(void* solver, const char* file_name);
   bool uno_set_solver_preset(void* solver, const char* preset_name);
   bool uno_set_solver_callbacks(void* solver, NotifyAcceptableIterateUserCallback notify_acceptable_iterate_callback,
      TerminationUserCallback user_termination_callback, void* user_data);
   bool uno_set_logger_stream_callback(LoggerStreamUserCallback logger_stream_callback, void* user_data);
   bool uno_reset_logger_stream();
   void uno_optimize(void* solver, void* model);
   int uno_get_solver_integer_option(void* solver, const char* option_name);
   double uno_get_solver_double_option(void* solver, const char* option_name);
   bool uno_get_solver_bool_option(void* solver, const char* option_name);
   const char* uno_get_solver_string_option(void* solver, const char* option_name);
   int32_t uno_get_optimization_status(void* solver);
   int32_t uno_get_solution_status(void* solver);
   double uno_get_solution_objective(void* solver);
   double uno_get_primal_solution_component(void* solver, int32_t index);
   double uno_get_constraint_dual_solution_component(void* solver, int32_t index);
   double uno_get_lower_bound_dual_solution_component(void* solver, int32_t index);
   double uno_get_upper_bound_dual_solution_component(void* solver, int32_t index);
   void uno_get_primal_solution(void* solver, double* primal_solution);
   void uno_get_constraint_dual_solution(void* solver, double* constraint_dual_solution);
   void uno_get_lower_bound_dual_solution(void* solver, double* lower_bound_dual_solution);
   void uno_get_upper_bound_dual_solution(void* solver, double* upper_bound_dual_solution);
   double uno_get_solution_primal_feasibility(void* solver);
   double uno_get_solution_stationarity(void* solver);
   double uno_get_solution_complementarity(void* solver);
   int32_t uno_get_number_iterations(void* solver);
   double uno_get_cpu_time(void* solver);